[gd_scene load_steps=35 format=2]

[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateLeft.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateRight.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Obstacle.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/IDE_Elements/LoopBlock.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Levels/TestLevel.gd" type="Script" id=12]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CallLoop.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Virus.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/Tilesets/Future_Tiles.png" type="Texture" id=17]
[ext_resource path="res://Assets/Tilesets/IndustrialTile_66.png" type="Texture" id=18]
[ext_resource path="res://Assets/Backgrounds/night1.png" type="Texture" id=19]
[ext_resource path="res://Assets/Tilesets/IndustrialTile_04.png" type="Texture" id=20]
[ext_resource path="res://Assets/Tilesets/IndustrialTile_18.png" type="Texture" id=21]
[ext_resource path="res://Assets/Tilesets/IndustrialTile_14.png" type="Texture" id=22]
[ext_resource path="res://Assets/Tilesets/IndustrialTile_21.png" type="Texture" id=23]
[ext_resource path="res://Assets/Tilesets/IndustrialTile_71.png" type="Texture" id=24]
[ext_resource path="res://Assets/Tilesets/IndustrialTile_03.png" type="Texture" id=25]
[ext_resource path="res://Assets/Tilesets/IndustrialTile_64.png" type="Texture" id=26]
[ext_resource path="res://Assets/Tilesets/IndustrialTile_73.png" type="Texture" id=27]
[ext_resource path="res://Assets/Tilesets/IndustrialTile_65.png" type="Texture" id=28]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Key.tscn" type="PackedScene" id=29]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Wall.tscn" type="PackedScene" id=30]

[sub_resource type="AnimationNodeStateMachinePlayback" id=4]

[sub_resource type="TileSet" id=1]
2/name = "Future_Tiles.png 2"
2/texture = ExtResource( 17 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 32, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
8/name = "IndustrialTile_04.png 8"
8/texture = ExtResource( 20 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Future_Tiles.png 9"
9/texture = ExtResource( 17 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 96, 96 )
9/tile_mode = 1
9/autotile/bitmask_mode = 0
9/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 5, Vector2( 2, 0 ), 64, Vector2( 2, 1 ), 65, Vector2( 2, 2 ), 1 ]
9/autotile/icon_coordinate = Vector2( 0, 0 )
9/autotile/tile_size = Vector2( 32, 32 )
9/autotile/spacing = 0
9/autotile/occluder_map = [  ]
9/autotile/navpoly_map = [  ]
9/autotile/priority_map = [  ]
9/autotile/z_index_map = [  ]
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Future_Tiles.png 10"
10/texture = ExtResource( 17 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 128, 0, 64, 128 )
10/tile_mode = 1
10/autotile/bitmask_mode = 0
10/autotile/bitmask_flags = [ Vector2( 0, 0 ), 69, Vector2( 0, 1 ), 321, Vector2( 0, 2 ), 4, Vector2( 0, 3 ), 256, Vector2( 1, 0 ), 261, Vector2( 1, 1 ), 324, Vector2( 1, 2 ), 1, Vector2( 1, 3 ), 64, Vector2( 2, 0 ), 325, Vector2( 3, 0 ), 325 ]
10/autotile/icon_coordinate = Vector2( 0, 0 )
10/autotile/tile_size = Vector2( 32, 32 )
10/autotile/spacing = 0
10/autotile/occluder_map = [  ]
10/autotile/navpoly_map = [  ]
10/autotile/priority_map = [  ]
10/autotile/z_index_map = [  ]
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "IndustrialTile_71.png 11"
11/texture = ExtResource( 24 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 0, 0, 32, 32 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "IndustrialTile_66.png 12"
12/texture = ExtResource( 18 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 0, 32, 32 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "IndustrialTile_65.png 13"
13/texture = ExtResource( 28 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 0, 0, 32, 32 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "IndustrialTile_64.png 14"
14/texture = ExtResource( 26 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 0, 32, 32 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "IndustrialTile_73.png 15"
15/texture = ExtResource( 27 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 0, 32, 32 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0
16/name = "IndustrialTile_03.png 16"
16/texture = ExtResource( 25 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 0.8, 0.8, 0.8, 0.592157 )
16/region = Rect2( 0, 0, 32, 32 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "IndustrialTile_18.png 0"
0/texture = ExtResource( 21 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "IndustrialTile_14.png 1"
1/texture = ExtResource( 22 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=3]
1/name = "night1.png 1"
1/texture = ExtResource( 19 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 288, 96, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "night1.png 2"
2/texture = ExtResource( 19 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 160, 288, 128, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "IndustrialTile_21.png 3"
3/texture = ExtResource( 23 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="LoopLevel" type="Node2D"]
script = ExtResource( 12 )

[node name="Grid" parent="." instance=ExtResource( 1 )]

[node name="Robot" parent="Grid" instance=ExtResource( 9 )]

[node name="AnimationTree" parent="Grid/Robot" index="5"]
parameters/playback = SubResource( 4 )

[node name="Obstacle" parent="Grid" instance=ExtResource( 10 )]

[node name="Obstacle2" parent="Grid" instance=ExtResource( 10 )]

[node name="Obstacle3" parent="Grid" instance=ExtResource( 10 )]

[node name="Button1" parent="Grid" instance=ExtResource( 8 )]

[node name="Door" parent="Grid" instance=ExtResource( 13 )]

[node name="Virus1" parent="Grid" instance=ExtResource( 16 )]

[node name="KeyR" parent="Grid" instance=ExtResource( 29 )]

[node name="DoorR" parent="Grid" instance=ExtResource( 13 )]

[node name="Wall" parent="Grid" instance=ExtResource( 30 )]

[node name="Wall2" parent="Grid" instance=ExtResource( 30 )]

[node name="LevelControl" parent="." instance=ExtResource( 2 )]

[node name="IDE" parent="." instance=ExtResource( 3 )]
margin_right = 1920.0

[node name="Loop1" parent="IDE" instance=ExtResource( 11 )]
margin_top = 513.0
margin_bottom = 788.0

[node name="Loop2" parent="IDE" instance=ExtResource( 11 )]
margin_top = 792.0
margin_bottom = 1067.0

[node name="Label" parent="IDE/Loop2/HighlightControl/ChooseLoopType" index="1"]
text = "Loop2"

[node name="CodeBlockBar" parent="." instance=ExtResource( 4 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 7 )]
position = Vector2( 90, 90 )

[node name="RotateLeft" parent="CodeBlockBar" instance=ExtResource( 5 )]
position = Vector2( 200, 90 )

[node name="RotateRight" parent="CodeBlockBar" instance=ExtResource( 6 )]
position = Vector2( 310, 90 )

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 14 )]
position = Vector2( 420, 90 )

[node name="Call_Loop1" parent="CodeBlockBar" instance=ExtResource( 15 )]

[node name="Call_Loop2" parent="CodeBlockBar" instance=ExtResource( 15 )]

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 490.0
margin_top = 381.0
margin_right = 596.0
margin_bottom = 439.0
rect_scale = Vector2( 3, 3 )
window_title = ""
dialog_text = "Level Cleared!"

[node name="BackLayer" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
z_index = -98
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -131060, 1073741826, 0, -65536, 1073741827, 0, -65535, 1610612740, 0, -65534, 1610612740, 0, -65533, 1610612740, 0, -65532, 1610612740, 0, -65531, 1610612740, 0, -65530, 1610612740, 0, -65529, 1610612740, 0, -65528, 1610612739, 0, -65524, 1073741826, 0, 0, 1610612750, 0, 1, 1610612750, 0, 2, 1610612750, 0, 3, 1610612750, 0, 4, 1610612750, 0, 5, 1610612750, 0, 6, 1610612750, 0, 7, 1610612750, 0, 8, 1610612750, 0, 9, 1610612750, 0, 10, 1610612750, 0, 11, 1610612750, 0, 12, 1610612750, 0, 13, 1610612750, 0, 14, 1610612750, 0, 15, 1610612750, 0, 16, 1610612750, 0, 17, 1610612750, 0, 18, 1610612750, 0, 19, 1610612750, 0, 20, 1610612750, 0, 21, 1610612750, 0, 22, 1610612750, 0, 23, 1610612750, 0, 24, 1610612750, 0, 65536, 1610612752, 0, 65537, 1610612752, 0, 65538, 1610612752, 0, 65539, 1610612752, 0, 65540, 1610612752, 0, 65541, 1610612752, 0, 65542, 1610612752, 0, 65543, 1610612752, 0, 65544, 1610612752, 0, 65545, 1610612752, 0, 65546, 1610612752, 0, 65547, 1610612752, 0, 65548, 1610612752, 0, 65549, 1610612752, 0, 65550, 1610612752, 0, 65551, 1610612752, 0, 65552, 1610612752, 0, 65553, 1610612752, 0, 65554, 1610612752, 0, 131072, 16, 0, 131073, 16, 0, 131074, 16, 0, 131075, 16, 0, 131076, 16, 0, 131077, 16, 0, 131078, 16, 0, 131079, 16, 0, 131080, 16, 0, 131081, 16, 0, 131082, 16, 0, 131083, 16, 0, 131084, 16, 0, 131085, 1610612752, 0, 131086, 1610612752, 0, 131087, 1610612752, 0, 131088, 1610612752, 0, 131089, 1610612752, 0, 131090, 1610612752, 0, 131091, 1610612752, 0, 131092, 1610612752, 0, 131093, 1610612752, 0, 196608, 16, 0, 196609, 16, 0, 196610, 16, 0, 196611, 16, 0, 196612, 16, 0, 196613, 16, 0, 196614, 16, 0, 196615, 16, 0, 196616, 16, 0, 196617, 16, 0, 196618, 1610612752, 0, 196619, 1610612752, 0, 196620, 1610612752, 0, 196621, 1610612752, 0, 196622, 1610612752, 0, 196623, 1610612752, 0, 196624, 1610612752, 0, 196625, 1610612752, 0, 196626, 1610612752, 0, 262144, 16, 0, 262145, 16, 0, 262146, 16, 0, 262147, 16, 0, 262148, 16, 0, 262149, 16, 0, 262150, 16, 0, 262151, 16, 0, 262152, 16, 0, 262153, 16, 0, 262154, 1610612752, 0, 262155, 1610612752, 0, 262156, 1610612752, 0, 262157, 1610612752, 0, 262158, 1610612752, 0, 262159, 1610612752, 0, 262160, 1610612752, 0, 262161, 1610612752, 0, 262162, 1610612752, 0, 327680, 16, 0, 327681, 16, 0, 327682, 16, 0, 327683, 16, 0, 327684, 16, 0, 327685, 16, 0, 327686, 16, 0, 327687, 16, 0, 327688, 16, 0, 327689, 16, 0, 327690, 1610612752, 0, 327691, 1610612752, 0, 327692, 1610612752, 0, 327693, 1610612752, 0, 327694, 1610612752, 0, 327695, 1610612752, 0, 327696, 1610612752, 0, 327697, 1610612752, 0, 327698, 1610612752, 0, 327699, 1610612752, 0, 327700, 1610612752, 0, 327701, 1610612752, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 393216, 1610612752, 0, 393217, 1610612752, 0, 393218, 1610612752, 0, 393219, 1610612752, 0, 393220, 1610612752, 0, 393221, 1610612752, 0, 393222, 1610612752, 0, 393223, 1610612752, 0, 393224, 1610612752, 0, 393225, 1610612752, 0, 393226, 1610612752, 0, 393227, 1610612752, 0, 393228, 1610612752, 0, 393229, 1610612752, 0, 393230, 1610612752, 0, 393231, 1610612752, 0, 393232, 1610612752, 0, 393233, 1610612752, 0, 393234, 1610612752, 0, 393235, 1610612752, 0, 393236, 1610612752, 0, 393237, 1610612752, 0, 393238, 0, 0, 393241, 0, 0, 393242, 0, 0, 458752, 1610612752, 0, 458753, 1610612752, 0, 458754, 1610612752, 0, 458755, 1610612752, 0, 458756, 1610612752, 0, 458757, 1610612752, 0, 458758, 1610612752, 0, 458759, 1610612752, 0, 458760, 1610612752, 0, 458761, 1610612752, 0, 458762, 1610612752, 0, 458763, 1610612752, 0, 458764, 1610612752, 0, 458765, 1610612752, 0, 458766, 1610612752, 0, 458767, 1610612752, 0, 458768, 1610612752, 0, 458769, 1610612752, 0, 458770, 1610612752, 0, 458771, 1610612752, 0, 458772, 1610612752, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458778, 0, 0, 458779, 0, 0, 524288, 1610612752, 0, 524289, 1610612752, 0, 524290, 1610612752, 0, 524291, 1610612752, 0, 524292, 1610612752, 0, 524293, 1610612752, 0, 524294, 1610612752, 0, 524295, 1610612752, 0, 524296, 1610612752, 0, 524297, 1610612752, 0, 524298, 1610612752, 0, 524299, 1610612752, 0, 524300, 1610612752, 0, 524301, 1610612752, 0, 524302, 1610612752, 0, 524303, 1610612752, 0, 524304, 1610612752, 0, 524305, 1610612752, 0, 524306, 1610612752, 0, 524307, 1610612752, 0, 524308, 1610612752, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524315, 0, 0, 589824, 1610612752, 0, 589825, 1610612752, 0, 589826, 1610612752, 0, 589827, 1610612752, 0, 589828, 1610612752, 0, 589829, 1610612752, 0, 589830, 1610612752, 0, 589831, 1610612752, 0, 589832, 1610612752, 0, 589833, 1610612752, 0, 589834, 1610612752, 0, 589835, 1610612752, 0, 589836, 1610612752, 0, 589837, 1610612752, 0, 589838, 1610612752, 0, 589839, 1610612752, 0, 589840, 1610612752, 0, 589841, 1610612752, 0, 589842, 1610612752, 0, 589843, 1610612752, 0, 589844, 1610612752, 0, 589845, 1610612752, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589851, 0, 0, 655360, 1610612752, 0, 655361, 1610612752, 0, 655362, 1610612752, 0, 655363, 1610612752, 0, 655364, 1610612752, 0, 655365, 1610612752, 0, 655366, 1610612752, 0, 655367, 1610612752, 0, 655368, 1610612752, 0, 655369, 1610612752, 0, 655370, 1610612752, 0, 655371, 1610612752, 0, 655372, 1610612752, 0, 655373, 1610612752, 0, 655374, 1610612752, 0, 655375, 1610612752, 0, 655376, 1610612752, 0, 655377, 1610612752, 0, 655378, 1610612752, 0, 655379, 1610612752, 0, 655380, 1610612752, 0, 655381, 1610612752, 0, 655382, 1610612752, 0, 655383, 0, 0, 655384, 0, 0, 655385, 0, 0, 655387, 0, 0, 720896, 1610612752, 0, 720897, 1610612752, 0, 720898, 1610612752, 0, 720899, 1610612752, 0, 720900, 1610612752, 0, 720901, 1610612752, 0, 720902, 1610612752, 0, 720903, 1610612752, 0, 720904, 1610612752, 0, 720905, 1610612752, 0, 720906, 1610612752, 0, 720907, 1610612752, 0, 720908, 1610612752, 0, 720909, 1610612752, 0, 720910, 1610612752, 0, 720911, 1610612752, 0, 720912, 1610612752, 0, 720913, 1610612752, 0, 720914, 1610612752, 0, 720915, 1610612752, 0, 720916, 1610612752, 0, 720917, 1610612752, 0, 720918, 1610612752, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720923, 0, 0, 786432, 1610612752, 0, 786433, 1610612752, 0, 786434, 1610612752, 0, 786435, 1610612752, 0, 786436, 1610612752, 0, 786437, 1610612752, 0, 786438, 1610612752, 0, 786439, 1610612752, 0, 786440, 1610612752, 0, 786441, 1610612752, 0, 786442, 1610612752, 0, 786443, 1610612752, 0, 786444, 1610612752, 0, 786445, 1610612752, 0, 786446, 1610612752, 0, 786447, 1610612752, 0, 786448, 1610612752, 0, 786449, 1610612752, 0, 786450, 1610612752, 0, 786451, 1610612752, 0, 786452, 1610612752, 0, 786453, 1610612752, 0, 786454, 1610612752, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 851968, 1610612752, 0, 851969, 1610612752, 0, 851970, 1610612752, 0, 851971, 1610612752, 0, 851972, 1610612752, 0, 851973, 1610612752, 0, 851974, 1610612752, 0, 851975, 1610612752, 0, 851976, 1610612752, 0, 851977, 1610612752, 0, 851978, 1610612752, 0, 851979, 1610612752, 0, 851980, 1610612752, 0, 851981, 1610612752, 0, 851982, 1610612752, 0, 851983, 1610612752, 0, 851984, 1610612752, 0, 851985, 1610612752, 0, 851986, 1610612752, 0, 851987, 1610612752, 0, 851988, 1610612752, 0, 851989, 1610612752, 0, 851990, 1610612752, 0, 851991, 1610612752, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 917504, 1610612752, 0, 917505, 1610612752, 0, 917506, 1610612752, 0, 917507, 1610612752, 0, 917508, 1610612752, 0, 917509, 1610612752, 0, 917510, 1610612752, 0, 917511, 1610612752, 0, 917512, 1610612752, 0, 917513, 1610612752, 0, 917514, 1610612752, 0, 917515, 1610612752, 0, 917516, 1610612752, 0, 917517, 1610612752, 0, 917518, 1610612752, 0, 917519, 1610612752, 0, 917520, 1610612752, 0, 917521, 1610612752, 0, 917522, 1610612752, 0, 917523, 1610612752, 0, 917524, 1610612752, 0, 917525, 1610612752, 0, 917526, 1610612752, 0, 917527, 1610612752, 0, 917528, 1610612752, 0, 917529, 1610612752, 0, 917530, 0, 0 )

[node name="Foreground" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
z_index = -97
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 16 )
format = 1
tile_data = PoolIntArray( 65536, 1610612736, 0, 65537, 1610612736, 0, 65538, 1610612736, 0, 65539, 1610612736, 0, 65540, 1610612736, 0, 65541, 1610612736, 0, 65542, 1610612736, 0, 65543, 1610612736, 0, 65544, 1610612736, 0, 65545, 1610612736, 0, 65546, 1610612736, 0, 65547, 1610612736, 0, 65548, 1610612736, 0, 65549, 1610612736, 0, 65550, 1610612736, 0, 1048595, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1376256, 1, 0, 1376257, 1, 0, 1376258, 1, 0, 1376259, 1, 0, 1376260, 1, 0, 1376261, 1, 0, 1376262, 1, 0, 1376263, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1376269, 1, 0, 1376270, 1, 0, 1376271, 1, 0, 1376272, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 1, 0, 1441792, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 1, 0, 1441805, 1, 0, 1441806, 1, 0, 1441807, 1, 0, 1441808, 1, 0, 1441809, 1, 0, 1441810, 1, 0, 1441811, 1, 0, 1507337, 1, 0, 3932160, 0, 0, 3932161, 0, 0, 3932162, 0, 0, 3932163, 0, 0, 3932164, 0, 0, 3932165, 0, 0, 3932166, 0, 0, 3932167, 0, 0, 3932168, 0, 0 )

[node name="Background" type="TileMap" parent="."]
scale = Vector2( 5, 5 )
z_index = -99
tile_set = SubResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1610612737, 0, 7, 1610612737, 0, 8, 1610612737, 0, 9, 1610612737, 0, 10, 1610612737, 0, 11, 1, 0, 13, 1610612737, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 21, 0, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1610612737, 0, 65543, 1610612737, 0, 65544, 1610612737, 0, 65545, 1610612737, 0, 65546, 1610612737, 0, 65547, 1, 0, 65548, 1610612737, 0, 65549, 1610612737, 0, 65550, 0, 0, 65552, 0, 0, 65557, 0, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1610612737, 0, 131082, 1, 0, 131083, 1610612737, 0, 131084, 1610612737, 0, 131085, 1610612737, 0, 131086, 0, 0, 131092, 0, 0, 131093, 0, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1610612737, 0, 196618, 1, 0, 196619, 1610612737, 0, 196620, 1610612737, 0, 196621, 1610612737, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196628, 0, 0, 196629, 0, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1610612737, 0, 262154, 1610612737, 0, 262155, 1610612737, 0, 262156, 1610612737, 0, 262157, 1610612737, 0, 262158, 0, 0, 262161, 0, 0, 262164, 0, 0, 262165, 0, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1610612737, 0, 327690, 1610612737, 0, 327691, 1610612737, 0, 327692, 1610612737, 0, 327694, 0, 0, 327700, 0, 0, 327701, 0, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393225, 1610612737, 0, 393226, 1610612737, 0, 393227, 3, 0, 393228, 1610612737, 0, 393230, 0, 0, 393236, 0, 0, 393237, 0, 0, 458752, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458763, 0, 0, 458764, 1610612737, 0, 458766, 0, 0, 458772, 0, 0, 458773, 0, 0, 524288, 0, 0, 524290, 0, 0, 524291, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524302, 0, 0, 524308, 0, 0, 524309, 0, 0, 589824, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589838, 0, 0, 589844, 0, 0, 589845, 0, 0, 655360, 0, 0, 655374, 0, 0, 655381, 0, 0, 720896, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720917, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786453, 0, 0, 1245198, 0, 0 )

[connection signal="interact" from="Grid/Robot" to="Grid/Button1" method="_on_Robot_interact"]
[connection signal="buttonPressed" from="Grid/Button1" to="." method="_on_Button_buttonPressed"]
[connection signal="forwardSignal" from="CodeBlockBar/Forward" to="Grid/Robot" method="_on_Forward_forwardSignal"]
[connection signal="rotateLeftSignal" from="CodeBlockBar/RotateLeft" to="Grid/Robot" method="_on_RotateLeft_rotateLeftSignal"]
[connection signal="rotateRightSignal" from="CodeBlockBar/RotateRight" to="Grid/Robot" method="_on_RotateRight_rotateRightSignal"]
[connection signal="interactSignal" from="CodeBlockBar/Interact" to="Grid/Robot" method="_on_Interact_interactSignal"]

[editable path="Grid/Robot"]
[editable path="Grid/Obstacle"]
[editable path="Grid/Obstacle2"]
[editable path="Grid/Obstacle3"]
[editable path="Grid/Door"]
[editable path="IDE"]
[editable path="IDE/Main"]
[editable path="IDE/Loop2"]
